2010-11-19  Michael Wiegand <michael.wiegand@greenbone.net>

	Addressed 64 bit compiler warnings.

	* cnvts/find_service/find_service.c (mark_unknown_svc, plugin_do_run):
	Use GSIZE_TO_POINTER consistently instead casts to (void *).

	* openvassd/openvassd.c (scanner_thread): Use size_t for sizeof return
	value.

2010-11-18  Michael Wiegand <michael.wiegand@greenbone.net>

	* cnvts/openvas_tcp_scanner/openvas_tcp_scanner.c: Added include for
	openvas/misc/services.h.
	(std_port): Removed now superfluous declaration of
	openvas_get_svc_name.

2010-11-18  Michael Wiegand <michael.wiegand@greenbone.net>

	Post-release version bump.

	* VERSION: Set to 3.2.0.beta2.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Increased PROJECT_NUMBER accordingly.

2010-11-18  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.2+beta1 release.

	* VERSION: Set to 3.2.0.beta1.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

	* configure.in: Set required openvas-libraries version to 4.0.0.

	* configure: Regenerated.

	* openvassd/openvassd.c (main): Display OPENVAS_FULL_VERSION instead
	of OPENVAS_VERSION in -V and -d.

2010-11-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Replace plugin_ calls by using nvti directly.

	* openvassd/oval_plugins.c (oval_plugin_t): Removed because
	this struct is not required anymore (the nvti carries all of it).
	(current_plugin): now a nvti_t instead of oval_plugin_t.
	(start_element, text, oval_plugin_add): Handle nvti object now.
	Replace plugin_ calls by repsective nvti_ functions.

2010-11-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* openvassd/attack.c (attack_network): Remove stray log message. Don't
	try to add target to the arglist if they are not set.

2010-11-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* VERSION: Updated from 3.1.2.SVN to 3.2.0.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Increased PROJECT_NUMBER accordingly.
